# dbt-toolkit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  plugin.json  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: lint.yml  test.yml
agents/: lineage-agent.md  test-failure-agent.md
hooks/: run-hook.cmd  session-start.sh
references/: artifacts.md  common-pitfalls.md  dbt-commands.md  incremental-models.md  jinja-context.md  node-selection.md  redshift-specifics.md
scripts/: artifacts.py  audit.py  bootstrap.sh  cli.py  config.py  coverage.py  deps.py  error_patterns.py  freshness.py  http.py  lineage.py  logger.py  runner.py  selector.py  state.py  telemetry.py
skills/dbt/: SKILL.md
skills/dbt-artifacts/: SKILL.md
skills/dbt-audit/: SKILL.md
skills/dbt-brainstorming/: SKILL.md
skills/dbt-code-review/: SKILL.md
skills/dbt-debug/: SKILL.md
skills/dbt-deps/: SKILL.md
skills/dbt-develop/: SKILL.md
skills/dbt-docs/: SKILL.md
skills/dbt-executing-plans/: SKILL.md
skills/dbt-freshness/: SKILL.md
skills/dbt-run/: SKILL.md
skills/dbt-run-operation/: SKILL.md
skills/dbt-seed-snapshot/: SKILL.md
skills/dbt-setup/: SKILL.md
skills/dbt-test/: SKILL.md
templates/: CLAUDE.md.template  config.yaml  gitignore.template  model.sql  test.sql  unit_test.yaml
tests/: test_artifacts.py  test_audit.py  test_cli.py  test_config.py  test_coverage.py  test_deps.py  test_error_patterns.py  test_freshness.py  test_http.py  test_integration.py  test_lineage.py  test_logger.py  test_runner.py  test_selector.py  test_state.py  test_telemetry.py
tests/fixtures/: sample_config.yaml  sample_dbt_project.yml  (+3 more)
(+2 files in other folders)
