[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dbt-toolkit"
version = "0.1.0"
description = "Workflow-oriented dbt project management for Claude Code"
readme = "README.md"
license = {text = "BUSL-1.1"}
requires-python = ">=3.9"
authors = [
    {name = "Rishav Chatterjee", email = "rishav.chatterjee@weather.com"},
]
keywords = ["dbt", "claude-code", "plugin", "data-engineering"]
dependencies = [
    "PyYAML>=6.0",
    "paramiko>=3.0",
    "click>=8.0",
    "rich>=13.0",
    "httpx>=0.24",
    "posthog>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.3",
    "pytest-httpx>=0.21",
]

[tool.setuptools.packages.find]
include = ["scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
